combined-pod.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: v1
kind: Pod
metadata:
  labels:
    purpose: my-2nd-pod
  name: my2nd
spec:
  containers:
  - image: nginx
    name: my-2nd-pod
    ports:
    - containerPort: 8080
      protocol: TCP

---
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    purpose: my-first-pod
spec:
  containers:
    - name: my-first-pod
      image: nginx
      ports:
        - containerPort: 80
          protocol: TCP
