command-args.yaml
apiVersion: v1
kind: Pod
metadata:
  name: eric
  labels:
    run: app
spec:
  containers:
  - name: nginx-container
    image: nginx
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo This is every 5 second check; sleep 5; done"]
    ports:
    - containerPort: 80
      protocol: TCP
