configmap-exercise.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-eric
spec:
  containers:
  - name: demo
    image: redis:5.0.4
    command: ["redis-server","/etc/redis/redis.conf"]
    ports:
    - containerPort: 6379
    volumeMounts:
    - name: demo-configmap
      mountPath: "/etc/redis"
  volumes:
  - name: demo-configmap
    configMap:
      name: redis-config-eric
      items:
      - key: "redis.conf"
        path: "redis.conf"
