deployment-with-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: my-deployment
  labels:
    purpose: k8s-class
spec:
  #strategy:
  #template:
  #replicas:
  #selector:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template: 
    metadata:
      name: eric-cactus
      labels:
        purpose: k8s-class
    spec:
      containers:
      - name: nginx-container
        image: nginx
        resources:
          requests: 
            cpu: 200m
          limits:
            cpu: 200m           
        ports: 
        - containerPort: 80
          protocol: TCP  
  replicas: 2
  selector:
    matchLabels:
      purpose: k8s-class
