first-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    purpose: my-first-pod
spec:
  containers:
    - name: my-first-pod
      image: nginx
      ports:
        - containerPort: 80
          protocol: TCP
