liveness-readinss-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exercise-pod
spec:
  containers:
  - name: app
    image: nginx
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: "256Mi"
        cpu: "300m"
      limits:
        memory: "1000Mi"
        cpu: "700m"
    livenessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 4
      periodSeconds: 10
    readinessProbe:
      httpGet:
        path: /index.html 
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 8
