pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-pod
spec:
  containers:
    - name: pvc-container
      image: alpine
      command: ["/bin/sh", "-c"]
      args: [ "hostname >> /opt/myhostnames ; sleep 60" ]
      volumeMounts:
        - name: eric-pvc
          mountPath: /opt/myhostnames
  volumes:
    - name: eric-pvc
      persistentVolumeClaim:
        claimName: eric-pvc
