secret-pod-exercise.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysqldb-eric
spec:
  containers:
  - name: mysqldb-eric
    image: mysql:5.6
    ports:
    - containerPort: 80
