secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
  - name: mypod
    image: redis
    volumeMounts:
    - name: boo
      mountPath: "/etc/boo"
    volumeMounts:
    - name: too
      mountPath: "/etc/too"
      readOnly: true
  volumes:
  - name: boo
    secret:
      secretName: mysecret
      items:
      - key: username
        path: username
  - name: too
    secret:
      secretName: mysecret
      items:
      - key: password
        path: password
